<resources>
    <string name="app_name">Ingoo</string>
    <string name="dummy_text2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. There are many variations of Lorem Ipsum is simply dummy text</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which dont look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isnt anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which dont look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isnt anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="detail_txt">Décoration mariage blanc - lanternes mariage - centre de table - Quoi de plus chic que des cadres et chevalets sur les tables du mariage ? Avec des fleurs à côté, le rendu sera romantique et champêtre</string>
    <string name="promo_txt1">Arche fleurie sous laquelle echanger ses  voeux.Ideal/npour un marriage en exterieur.</string>
    <string name="vous_avez_d_j_un_compte">Vous avez déjà un compte?<font fgcolor="#67ABB1">Connexion</font></string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="ou_se_connecter_avec">Ou se connecter avec</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="mot_de_passe_oublih">Mot de passe oublié</string>
    <string name="envoyez">Envoyez</string>
    <string name="entrez_l_adresse_e_mail_que_vous_avez_utilis_e_pour_cr_er_votre_compte_et_nous_vous_enverrons_un_lien_pour_r_initialiser_votre_mot_de_passe">Entrez l’adresse e-mail que vous avez utilisée pour créer votre compte et nous vous enverrons un lien pour réinitialiser votre mot de passe</string>
    <string name="nous_venons_d_envoyez_votre_mot_de_passe_a_votre_adresse_e_email_vous_recevrez_sous_peu_votre_mot_de_passe">Nous venons d\'envoyez votre mot de passe à votre adresse e-mail. Vous recevrez sous peu votre mot de passe</string>
    <string name="nom">Nom</string>
    <string name="confirmez_votre_mot_de_passe">Confirmez votre mot de passe</string>
    <string name="s_lectionnez_le_profil">Sélectionnez le profil</string>
    <string name="s_inscrire">S’inscrire</string>
    <string name="inscrivez_vous_avec">Inscrivez vous avec</string>
    <string name="conditions_g_n_rales_d_utilisateurs">Conditions générales d’utilisateurs</string>
    <string name="lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_mini_veniam_quis_lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_mini_veniam_quis_lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_mini_veniam_quis_lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_mini_veniam_quis_lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_mini_veniam_quis_lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_mini_veniam_quis_lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_mini_veniam_quis_lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_mini_veniam_quis_lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_mini_veniam_quis_lorem_ipsum_dolor_sit_amet_consec_tetur_adipiscing_elit_sed_do_eiusmo_temp_cididunt_ut_labore_et_dolore_magna_aliqua_ut_enusmo_temp_cididu">Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam quis. Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam quis. Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam quis.Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam quis. Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam quis.Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam quis. Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam quis.Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam quis. Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam quis.Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmo temp cididunt ut labore et dolore magna aliqua. Ut enusmo temp cididu</string>
    <string name="continuer_et_accepter">Continuer et accepter</string>
    <string name="politique_de_confidentialit">Politique de confidentialité</string>
    <string name="mon_profil">Mon Profil</string>
    <string name="lilue_event">Lilue event</string>
    <string name="categories_a_la_une">Categories a la une</string>
    <string name="_4_5">4.5</string>
    <string name="voiur_tous_3">Voiur tous (3)</string>
    <string name="prestetaires_a_la_une">Prestetaires a la une</string>
    <string name="dj">Dj</string>
    <string name="furniture">Furniture</string>
    <string name="prestataires_la_une">Prestataires à la une</string>
    <string name="decoration">Patisserie</string>
    <string name="trois_quartiers_libreville">Trois quartiers, Libreville</string>
    <string name="cat_gories_la_une">Catégories à la une</string>
    <string name="d_coration">Décoration</string>
    <string name="event_by_leaty">Event by Leaty</string>
    <string name="les_anges_d_emma">Les anges d’Emma</string>
    <string name="la_fine_bouch_e">La fine bouchée</string>
    <string name="gateaux">Gateaux</string>
    <string name="salles_de_mariage">Salles de mariage</string>
    <string name="salles_de_merrige">Salles de merrige</string>
    <string name="lo_fine_bouchee">Lo fine bouchee</string>
    <string name="menu">Menu</string>
    <string name="clients">Clients</string>
    <string name="souscrire_au_pack">Souscrire au pack</string>
    <string name="param_tres">Paramètres</string>
    <string name="offres">Offres</string>
    <string name="satistiques">Statistiques</string>
    <string name="r_alisations">Réalisations</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="demander_assistance">Demander assistance</string>
    <string name="objet">Objet</string>
    <string name="votre_message">Votre message</string>
    <string name="line_ka">Line Ka</string>
    <string name="live_veze">Live veze</string>
    <string name="lucien_pacome">Lucien Pacome</string>
    <string name="monique_mie">Monique mie</string>
    <string name="lia_star">Lia star</string>
    <string name="abbonements">Abonnements</string>
    <string name="annael_illa">Annael Illa</string>
    <string name="leeyah_nguema">Leeyah Nguema</string>
    <string name="yasmine_bitome">Yasmine Bitome</string>
    <string name="noelle_ngoye">Noelle Ngoye</string>
    <string name="happy_bouyomeka">Happy Bouyomeka</string>
    <string name="wilda_koffi">Wilda Koffi</string>
    <string name="bloquer">Bloquer</string>
    <string name="demandes">Demandes</string>
    <string name="attente">Attente</string>
    <string name="r_pondue">Répondue</string>
    <string name="valid_e">Validée</string>
    <string name="rejet_e">Rejetée</string>
    <string name="j_aimerai_recevoir_un_devis_mon_theme_est">J\'aimerai recevoir un devis mon theme est...</string>
    <string name="leats_events">Leats Events</string>
    <string name="makeup_a">Makeup A</string>
    <string name="aperie_chic">Aperie Chic</string>
    <string name="l_eau_gooue">L\'eau gooue</string>
    <string name="jet_invite_a_consulter_le_devis_deja_envoye">Jet invite a consulter le devis deja envoye...</string>
    <string name="make_up_by_a">Make up by A</string>
    <string name="on_commencera_par_des_soins">On commencera par des soins</string>
    <string name="_27_05_2020">27/05/2020</string>
    <string name="_26_05_2020">26/05/2020</string>
    <string name="_26_05_2027">26/05/2027</string>
    <string name="_25_05_2019">25/05/2019</string>
    <string name="anael_antch">Anael ANTCH</string>
    <string name="bonjour_vanessa_avez_vous_re_u_mon_devis_je_vous_ai_galement_envoyer_une_recommandation_de_boutique_pour_votre_robe_en_esp_rant_que_vous_trouverez_votre_compte">Bonjour Vanessa. Avez vous reçu mon devis? je vous ai également envoyer une recommandation de boutique pour votre robe. En espérant que vous trouverez votre compte.</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="selectionnez">Selectionnez</string>
    <string name="options_de_notification">Options de notification</string>
    <string name="message_alerte">Message alerte</string>
    <string name="message">Message</string>
    <string name="commentaire">Commentaire</string>
    <string name="autoriser">Autoriser</string>
    <string name="d_tail_d_une_r_alisation">Détail d’une réalisation</string>
    <string name="d_coration_mariage_blanc_lanternes_mariage_centre_de_table_quoi_de_plus_chic_que_des_cadres_et_chevalets_sur_les_tables_du_mariage_avec_des_fleurs_c_t_le_rendu_sera_romantique_et_champ_tre">Décoration mariage blanc - lanternes mariage - centre de table - Quoi de plus chic que des cadres et chevalets sur les tables du mariage ? Avec des fleurs à côté, le rendu sera romantique et champêtre</string>
    <string name="titre">Titre</string>
    <string name="ajouter_une_image">Ajouter une image</string>
    <string name="description">Description</string>
    <string name="poster">Poster</string>
    <string name="ajout_d_une_r_alisation">Ajout d’une réalisation</string>
    <string name="chevalet">Chevalet</string>
</resources>