<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ThirtySevenActivity">

    <LinearLayout
        android:id="@+id/comenter"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/opation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/commant_back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/blackback" />

            <TextView
                android:id="@+id/opations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/commant_back"
                android:fontFamily="@font/josefinsans_semibold"
                android:gravity="center_vertical"
                android:text="@string/commentaire"
                android:textColor="@color/headerlightcolor"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"

                android:background="@drawable/cancel" />

            <TextView
                android:id="@+id/selectionnez"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/opations"
                android:layout_marginTop="10dp"
                android:background="#F6F7FF"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/selectionnez"
                android:textColor="#8C8DAA"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/messagealerte"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/selectionnez"
                android:fontFamily="@font/josefinsans_regular"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:paddingStart="10dp"
                android:text="@string/autoriser"
                android:textColor="#5663FF"
                android:textSize="16dp"
                />

            <ImageView
                android:id="@+id/check"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@+id/selectionnez"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:padding="2dp"
                android:src="@drawable/checked" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/josefinsans_regular"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:text="@string/bloquer"
                android:layout_marginStart="10dp"
                android:textColor="#3E3F68"
                android:textSize="16dp"
                />

            <ImageView
                android:id="@+id/circle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:padding="2dp"
                android:src="@drawable/circle" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/comenter"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/connecxiorlbg"
        android:fontFamily="@font/josefinsans_regular"
        android:gravity="center"
        android:text="@string/enregistrer"
        android:textColor="@color/white"
        android:textSize="20dp"
       />

</RelativeLayout>