<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ThirtySixActivity">




        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/opation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/opationsback"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/blackback" />

                <TextView
                    android:id="@+id/opations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/opationsback"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/josefinsans_semibold"
                    android:text="@string/options_de_notification"
                    android:textColor="@color/headerlightcolor"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/cancel" />

                <TextView
                    android:id="@+id/selectionnez"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/opations"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/josefinsans_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/selectionnez"
                    android:textColor="@color/rock_blue"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/messagealerte"
                    android:layout_below="@+id/selectionnez"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/message_alerte"
                    android:paddingStart="10dp"
                    android:textColor="#5663FF"
                    android:fontFamily="@font/josefinsans_semibold"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/check"
                    android:layout_below="@+id/selectionnez"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/checked" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/josefinsans_semibold"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:paddingStart="10dp"

                    android:text="@string/email"
                    android:textColor="#3E3F68"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/circle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/circle" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/rl2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/josefinsans_semibold"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/message"
                    android:textColor="#3E3F68"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/circle1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/circle" />


            </RelativeLayout>


        </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@id/linear"
        android:background="@drawable/connecxiorlbg"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/josefinsans_bold2"
        android:layout_marginBottom="20dp"
        android:text="@string/enregistrer"
        android:textSize="18dp"
        android:textStyle="bold" />

</RelativeLayout>